tests/ui/deprecations.stderr
error: use of deprecated constant `pyo3::impl_::deprecations::PYCLASS_TEXT_SIGNATURE`: put `text_signature` on `#[new]` instead of `#[pyclass]`
 --> tests/ui/deprecations.rs:6:8
  |
6 | #[pyo3(text_signature = "()")]
  |        ^^^^^^^^^^^^^^
  |
note: the lint level is defined here
 --> tests/ui/deprecations.rs:1:9
  |
1 | #![deny(deprecated)]
  |         ^^^^^^^^^^
